kubernetes/main/apps/media/qui/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qui
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qui
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    # same-node ClusterIP replies miss CT reverse-xlate (socketLB
    # hostNamespaceOnly + endpointRoutes) and hit ingress policy
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: qbittorrent
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: qbittorrent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
